// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function context matchers toBeCalledWithContext asserts mock has been called at least once with given context: multiple call 1`] = `
<d>expect(</><r>jest.fn()</><d>).toBeCalledWithContext(</><g>expected</><d>)</>

Expected: <g>{}</>
Received
       1: <r>null</>
       2: <r>null</>

Number of calls: <r>2</>
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has been called at least once with given context: no calls 1`] = `
<d>expect(</><r>jest.fn()</><d>).toBeCalledWithContext(</><g>expected</><d>)</>

Expected: <g>{}</>

Number of calls: <r>0</>
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has been called at least once with given context: single call 1`] = `
<d>expect(</><r>jest.fn()</><d>).toBeCalledWithContext(</><g>expected</><d>)</>

Expected: <g>{}</>
Received: <r>null</>
Number of calls: <r>1</>
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has not been called with given context: multiple call 1`] = `
<d>expect(</><r>jest.fn()</><d>).</>not<d>.toBeCalledWithContext(</><g>expected</><d>)</>

Expected: not <g>{}</>
Received
       1:     <d>{}</>
       3:     <d>{}</>

Number of calls: <r>3</>
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has not been called with given context: partial call 1`] = `
<d>expect(</><r>jest.fn()</><d>).</>not<d>.toBeCalledWithContext(</><g>expected</><d>)</>

Expected: not <g>{}</>
Received
       1:     <d>{}</>

Number of calls: <r>2</>
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has not been called with given context: single call 1`] = `
<d>expect(</><r>jest.fn()</><d>).</>not<d>.toBeCalledWithContext(</><g>expected</><d>)</>

Expected: not <g>{}</>
Received:     <d>{}</>

Number of calls: <r>1</>
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has been called at least once with given context: multiple call 1`] = `
<d>expect(</><r>jest.fn()</><d>).toHaveBeenCalledWithContext(</><g>expected</><d>)</>

Expected: <g>{}</>
Received
       1: <r>null</>
       2: <r>null</>

Number of calls: <r>2</>
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has been called at least once with given context: no calls 1`] = `
<d>expect(</><r>jest.fn()</><d>).toHaveBeenCalledWithContext(</><g>expected</><d>)</>

Expected: <g>{}</>

Number of calls: <r>0</>
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has been called at least once with given context: single call 1`] = `
<d>expect(</><r>jest.fn()</><d>).toHaveBeenCalledWithContext(</><g>expected</><d>)</>

Expected: <g>{}</>
Received: <r>null</>
Number of calls: <r>1</>
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has not been called with given context: multiple call 1`] = `
<d>expect(</><r>jest.fn()</><d>).</>not<d>.toHaveBeenCalledWithContext(</><g>expected</><d>)</>

Expected: not <g>{}</>
Received
       1:     <d>{}</>
       3:     <d>{}</>

Number of calls: <r>3</>
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has not been called with given context: partial call 1`] = `
<d>expect(</><r>jest.fn()</><d>).</>not<d>.toHaveBeenCalledWithContext(</><g>expected</><d>)</>

Expected: not <g>{}</>
Received
       1:     <d>{}</>

Number of calls: <r>2</>
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has not been called with given context: single call 1`] = `
<d>expect(</><r>jest.fn()</><d>).</>not<d>.toHaveBeenCalledWithContext(</><g>expected</><d>)</>

Expected: not <g>{}</>
Received:     <d>{}</>

Number of calls: <r>1</>
`;
